# ai-memory-compiler

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: codex-parity-architecture.md  codex-transcripts.md  launchd-maintenance.plist  operations.md
docs/superpowers/plans/: 2026-07-02-kb-service-improvements.md  2026-07-17-kb-fts-index.md
hooks/: codex-stop.py  pre-compact.py  sanitize.py  session-end.py  session-start.py
scripts/: codex_exec.py  codex_session.py  compile.py  config.py  consolidate.py  flush.py  health.py  import_session.py  index_rewrite.py  kb_db.py  kb_git.py  lint.py  locking.py  maintenance.py  mcp_server.py  query.py  runtime_config.py  session_utils.py  utils.py
tests/: conftest.py  test_codex_session.py  test_codex_stop.py  test_compile.py  test_consolidate.py  test_flush.py  test_health.py  test_index_rewrite.py  test_kb_db.py  test_kb_git.py  test_lint.py  test_mcp_server.py  test_runtime_config.py  test_sanitize.py  test_session_start.py  test_session_utils.py  test_utils.py
tests/fixtures/: claude-session-with-meta.jsonl  claude-session.jsonl  codex-session.jsonl
