[project]
name = "ai-memory-compiler"
version = "0.2.0"
description = "Your AI conversations compile themselves into a searchable knowledge base. Works with Claude Code and Codex."
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.ruff]
line-length = 100
